// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message[Base] should render correctly  1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px;"
>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show
    </span>
  </button>
  <button
    class="soui-button soui-button-primary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <button
    class="soui-button soui-button-success soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="soui-button soui-button-warning soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Warn
    </span>
  </button>
  <button
    class="soui-button soui-button-danger soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Error
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Close All
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  2`] = `
<div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Duration 10 s.
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Manually close
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  3`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          middle
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-right
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-right
        </span>
      </div>
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show message.
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render default 1`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message[Base] should render default 2`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
